# llm-coding-agent-system

./: .env.example  .gitignore  README.md  agent.py  config.py  config.yaml  pyproject.toml
coder_agent/: __init__.py  __main__.py  config.py
report/: BASELINE_0_4_0.md  BASELINE_0_4_0_RC.md  BASELINE_0_5_1.md  BASELINE_0_6_0.md  BASELINE_0_7_1.md  BASELINE_0_7_2.md  CoderAgent_Execution_Plan.md  CoderAgent_Plan_v2.md  CoderAgent_Plan_v3.md  EVAL_BATCH_REPORT.md  EVAL_COMPARISON_REPORT.md  IMPROVEMENT_PLAN_v0.5.0.md  IMPROVEMENT_PLAN_v0.6.0.md  IMPROVEMENT_PLAN_v0.7.0.md  IMPROVEMENT_PLAN_v0.7.2.md  IMPROVEMENT_REPORT_v0.4.3.md  IMPROVEMENT_REPORT_v0.4.4-debug.md  IMPROVEMENT_REPORT_v0.4.4-debug2.md  IMPROVEMENT_REPORT_v0.4.4-fix5.md  IMPROVEMENT_REPORT_v0.4.4-fix5b.md  IMPROVEMENT_REPORT_v0.4.4-smoke.md  IMPROVEMENT_REPORT_v0.4.4.md  IMPROVEMENT_REPORT_v0.4.5.md  IMPROVEMENT_REPORT_v0.5.0.md  IMPROVEMENT_REPORT_v0.5.1.md  IMPROVEMENT_REPORT_v0.5.2.md  IMPROVEMENT_REPORT_v0.6.0a.md  IMPROVEMENT_REPORT_v0.6.0b.md  IMPROVEMENT_REPORT_v0.6.0c.md  IMPROVEMENT_REPORT_v0.6.0d.md  IMPROVEMENT_REPORT_v0.7.1.md  IMPROVEMENT_REPORT_v041.md  IMPROVEMENT_REPORT_v043.md  IMPROVEMENT_REPORT_v044.md  IMPROVEMENT_REPORT_v10.md  IMPROVEMENT_REPORT_v11.md  IMPROVEMENT_REPORT_v2.md  IMPROVEMENT_REPORT_v3.md  IMPROVEMENT_REPORT_v4.md  IMPROVEMENT_REPORT_v5.md  (+13 more)
results_mbpp/: C1.json  C1.jsonl  C1_run_manifest.json  C2.json  C2.jsonl  C2_run_manifest.json  C3.json  C3.jsonl  C3_run_manifest.json  C4.json  C4.jsonl  C4_run_manifest.json  C5.json  C5.jsonl  C5_run_manifest.json  C6.json  C6.jsonl  C6_run_manifest.json  ablation_comparison_manifest.json  ablation_comparison_report.json
scripts/: export_swebench_manifest.py
tests/: test_ablation.py  test_agent_errors.py  test_agent_termination.py  test_analysis.py  test_benchmark_expansion.py  test_cli_chat.py  test_cli_eval.py  test_config.py  test_config_profiles.py  test_context_compression.py  test_eval_runner.py  test_file_tools.py  test_humaneval_prompt.py  test_llm_client.py  test_memory_manager.py  test_run_cli.py  test_run_resume.py  test_run_state_store.py  test_search_tool.py  test_service_api.py  test_shell_tool.py  test_swebench_benchmark.py
tools/: __init__.py  base.py  file_tools.py  search_tool.py  shell_tool.py
(+126 files in other folders)
