[project]
name = "llm-coding-agent-system"
version = "0.7.2"
description = "LLM coding agent system with ReAct execution, evaluation, and analysis tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.24.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "pytest>=9.0.2",
    "datasets>=2.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
coder-agent = "coder_agent.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
